<resources>
    <string name="app_name">Подбери рецепт PRO</string>
    <string name="search_by_ingredient">Поиск по ингредиентам</string>
    <string name="search_by_name">Поиск по названию или категории</string>
    <string name="search_by_name_short">Поиск по названию</string>
    <string name="ingredient_list">Список ингредиентов</string>
    <string name="select_one">Выберите хотя бы один ингредиент</string>
    <string name="selected">Выбрано</string>
    <string name="selected_ingredients">Подтвердите выбор</string>
    <string name="no_more_then_50_ingrs">Выберите не более 50 ингредиентов</string>
    <string name="count_of_matching_ingredients">Совпавшие ингредиенты: </string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="drawer_menu_favorites">Избранные рецепты</string>
    <string name="drawer_menu_ingr_favorites">Избранные ингредиенты</string>
    <string name="drawer_menu_stop_list">Стоп-лист</string>
    <string name="drawer_menu_full_list">Полный список рецептов</string>
    <string name="drawer_menu_exit">Выход</string>
    <string name="drawer_menu_vk">Мы ВКонтакте</string>
    <string name="toast_favorites">Добавлено в избранные рецепты</string>
    <string name="toast_favorites_remove">Удалено из избранных рецептов</string>
    <string name="toast_shopping_cart">Добавлено в список покупок</string>
    <string name="full_list">Полный список рецептов</string>
    <string name="recipe_list">Список рецептов</string>
    <string name="weights">Таблица мер и весов</string>
    <string name="cooking_time">Время готовки</string>
    <string name="category">Категория:</string>
    <string name="categories">Категории рецептов</string>
    <string name="checkbox_add">Добавлено в избранные ингредиенты</string>
    <string name="checkbox_remove">Удалено из избранных ингредиентов</string>
    <string name="stop_add">Добавлено в стоп-лист</string>
    <string name="stop_remove">Удалено из стоп-листа</string>
    <string name="remove_from_stop">Для выбора ингредиента удалите его из стоп-листа</string>
    <string name="recipe_list_empty">Рецепты не найдены</string>
    <string name="alert_1">Вы можете прокручивать категории быстрее, проводя пальцем по верхним вкладкам</string>
    <string name="alert_2">Нажимайте на ингредиенты, подтвердите выбор галочкой в правом верхнем углу</string>
    <string name="alert_3">Слева открывается меню с дополнительными возможностями</string>
    <string name="alert_4">Внимание! Для отображения фотографий рецептов требуется интернет-соединение!</string>
    <string name="alert_5">Показывать подсказки при следующем запуске?</string>
    <string name="alert_button_yes">Показывать</string>
    <string name="alert_button_no">Не показывать</string>
    <string name="alert_6_show">Поставить оценку</string>
    <string name="alert_6_not_show">Больше не показывать</string>
    <string name="alert_6_exit">Выход</string>
    <string name="alert_7">Сбросить выбор всех ингредиентов?</string>
    <string name="alert_7_yes">Да</string>
    <string name="alert_7_no">Нет</string>
    <string name="share_recipe">Share a recipe</string>
    <string name="divider">--------------------------------------</string>
    <string name="more_recipes">Еще больше рецептов в приложении \"Подбери рецепт\" для Android:\nhttps://play.google.com/store/apps/details?id=com.ggl.jr.cookbooksearchbyingredients</string>

    <!--категории фильтра-->
    <string name="no_recipes_by_category">Рецепты по категории не найдены</string>
    <string name="all">Все</string>
    <string name="main_courses">Вторые блюда</string>
    <string name="pancakes">Блины и оладьи</string>
    <string name="multicooker">Блюда для мультиварки</string>
    <string name="breakfast">Блюда на завтрак</string>
    <string name="garnishes">Гарниры</string>
    <string name="desserts">Десерты</string>
    <string name="preparations">Заготовки</string>
    <string name="snacks">Закуски</string>
    <string name="healthy_food">Здоровое питание</string>
    <string name="porridges">Каши</string>
    <string name="drinks">Напитки</string>
    <string name="unsweetened_pastry">Несладкая выпечка</string>
    <string name="fish_seefood">Рыба и морепродукты</string>
    <string name="salads">Салаты</string>
    <string name="sweet_pastry">Сладкая выпечка</string>
    <string name="sauces">Соусы</string>
    <string name="soups">Супы</string>

    <!--Таблица мер и весов -->
    <string name="products">Продукты</string>
    <string name="weight_in_grams">Вес продуктов в граммах</string>
    <string name="glass_250_ml">Стакан 250 мл.</string>
    <string name="glass_200_ml">Стакан 200 мл.</string>
    <string name="table_spoon">Стол. ложка</string>
    <string name="tea_spoon">Чайная ложка</string>
    <string name="one_piece_in_grams">1 штука в грам.</string>

    <!--Время готовки-->
    <string name="porridge_title">Каши</string>
    <string name="porridge_body">Каша</string>
    <string name="grain">Крупа</string>
    <string name="liquid">Жид-ть</string>
    <string name="time_to_boil">Время варки</string>
    <string name="meat">Мясо</string>
    <string name="seafood">Морепродукты</string>
    <string name="bird">Птица</string>
    <string name="vegetables">Овощи</string>
    <string name="other">Другое</string>
    <string name="boiling">Варка целиком</string>
    <string name="fry_up">Жарение кусками</string>
    <string name="stewing">Тушение кусками</string>

    <!--Список покупок-->
    <string name="shopping_list">Список покупок</string>
    <string name="hint_name">Название</string>
    <string name="weight_hint">Вес гр.</string>
    <string name="weight2_hint">Вес кг.</string>
    <string name="count_hint">Кол-во шт.</string>
    <string name="ok_hint">Подтвердить</string>
    <string name="empty_name">Заполните поле \"Название\"</string>
    <string name="no_more_then_50_records">Доступно не более 50 записей</string>
    <string name="added_successfully">Запись добавлена</string>
    <string name="removed_successfully">Запись удалена</string>

    <!--Свои рецепты-->
    <string name="user_recipe_hint">Введите текст</string>
    <string name="user_recipe_name">Название рецепта</string>
    <string name="user_recipe_ingredients">Ингредиенты</string>
    <string name="user_recipe_description">Приготовление</string>
    <string name="user_recipe_add_photo">Добавить фотографию</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="choose_another_image_format">Выберите другой формат изображения</string>
    <string name="alert_grant_permission">Требуется доступ к мультимедиа файлам</string>
    <string name="alert_open_settings">Открыть настройки приложения для предоставления доступа к мультимедиа</string>
    <string name="alert_delte_recipe">Удалить рецепт?</string>
    <string name="alert_yes">Разрешить</string>
    <string name="alert_no">Отклонить</string>
    <string name="drawer_menu_user_recipes">Мои рецепты</string>
    <string name="add_user_recipe">Добавить рецепт</string>
    <string name="user_recipe_view_mode">Режим просмотра, для редактирования нажмите назад, а затем на иконку с карандашом</string>
    <string name="user_recipe_edit_mode">Режим редактирования</string>

    <!--Таймер-->
    <string name="set_timer">Установить время таймера</string>
    <string name="timer">Таймер</string>
    <string name="default_time">00:00:00</string>

    <!--<string name="app_name">CookBookSearchByIngredients</string>-->
    <!--<string name="search_by_ingredient">Search by ingredient</string>-->
    <!--<string name="search_by_name">Search by name or category</string>-->
    <!--<string name="ingredient_list">Ingredient list</string>-->
    <!--<string name="select_one">Select at least one ingredient</string>-->
    <!--<string name="selected">Selected</string>-->
    <!--<string name="no_more_than_15">Select no more than 15 ingredients</string>-->
    <!--<string name="count_of_matching_ingredients">Matching ingredients: </string>-->
    <!--<string name="navigation_drawer_open">Open</string>-->
    <!--<string name="navigation_drawer_close">Close</string>-->
    <!--<string name="drawer_menu_favorites">Favorites</string>-->
    <!--<string name="drawer_menu_full_list">Full list</string>-->
    <!--<string name="drawer_menu_exit">Exit</string>-->
    <!--<string name="toast_favorites">Added to Favorites</string>-->
    <!--<string name="toast_favorites_remove">Removed from Favorites</string>-->
    <!--<string name="full_list">Full list of recipes</string>-->
    <!--<string name="recipe_list">List of recipes</string>-->
    <!--<string name="weights">Weights and measures</string>-->
    <!--<string name="cooking_time">Cooking time</string>-->
    <!--<string name="category">Category:</string>-->

    <!--&lt;!&ndash;Weights and measures&ndash;&gt;-->
    <!--<string name="products">Products</string>-->
    <!--<string name="weight_in_grams">Products weight in grams</string>-->
    <!--<string name="glass_250_ml">Glass 250 ml.</string>-->
    <!--<string name="glass_200_ml">Glass 200 ml.</string>-->
    <!--<string name="table_spoon">Table spoon</string>-->
    <!--<string name="tea_spoon">Tea spoon</string>-->
    <!--<string name="one_piece_in_grams">1 piece in grams</string>-->

    <!--&lt;!&ndash;Cooking time&ndash;&gt;-->
    <!--<string name="porridge_title">Porridge</string>-->
    <!--<string name="porridge_body">Porridge</string>-->
    <!--<string name="grain">Grain</string>-->
    <!--<string name="liquid">Liquid</string>-->
    <!--<string name="time_to_boil">Time to boil</string>-->
    <!--<string name="meat">Meat</string>-->
    <!--<string name="seafood">Seafood</string>-->
    <!--<string name="bird">Bird</string>-->
    <!--<string name="vegetables">Vegetables</string>-->
    <!--<string name="other">Other</string>-->
    <!--<string name="boiling">Boiling (whole)</string>-->
    <!--<string name="fry_up">Fry-up (pieces)</string>-->
    <!--<string name="stewing">Stewing (pieces)</string>-->

</resources>
