<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/alert_window"
        android:layout_width="220dp"
        android:layout_height="130dp"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:alpha="0.92"
        android:scaleType="fitXY"
        android:src="@drawable/alert_window"/>

    <Button
        android:id="@+id/choice_button_yes"
        android:layout_width="108dp"
        android:layout_height="40dp"
        android:textSize="14sp"
        android:textColor="@color/Black"
        android:text="@string/alert_7_yes"
        android:layout_gravity="right"
        android:layout_marginTop="150dp"
        android:layout_marginRight="131dp"
        android:alpha="0.92"
        android:background="@drawable/alert_window"/>

    <Button
        android:id="@+id/choice_button_no"
        android:layout_width="108dp"
        android:layout_height="40dp"
        android:textSize="14sp"
        android:textColor="@color/Black"
        android:text="@string/alert_7_no"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="150dp"
        android:alpha="0.92"
        android:background="@drawable/alert_window"/>

    <TextView
        android:id="@+id/alert_message"
        android:layout_width="220dp"
        android:layout_height="130dp"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="55dp"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:text="@string/alert_7"
        android:textColor="@color/Black"
        android:textSize="18sp" />

</FrameLayout>